modify readme.md/index/pasta and made files pizza/lasagna

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,6 +7,24 @@
     <title>Pasta</title>
 </head>
 <body>
-    <h1>Pasta</h1>
+    <h1>Simple Pasta Recipe</h1>
+
+    <a href="../index.html">Back to Home</a>
+
+    <img src = "https://www.allrecipes.com/thmb/V1fydRvPJhJQ6zME5Lm7jPi6J2o=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11973-spaghetti-carbonara-mfs-043-2b5e74565db24e789aa790adfa87e18d.jpg" alt = "picture of carbonara">
+
+    <h3>Description</h3>
+    <p>Hi! Welcome to my Simple Pasta Recipe!</p>
+    <p></p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li></li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <Li></Li>
+    </ol>
 </body>
 </html>
