--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/pasta.html">Simple Pasta Recipe</a></li>
+        <li><a href="recipes/pizza.html">Simple Pasta Recipe</a></li>
+        <li><a href="recipes/lasagna.html">Simple Pasta Recipe</a></li>
+        <!--two more li links for other recipes-->
+    </ul>
 </body>
 </html>
