Modify index.html to add links Modify pasta.html with all parts completed

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -4,27 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasta</title>
+    <title>Broke Boyz Carbonara Recipe</title>
 </head>
 <body>
-    <h1>Simple Pasta Recipe</h1>
+    <h1>Broke Boyz Carbonara Recipe</h1>
 
-    <a href="../index.html">Back to Home</a>
+    <a href="../index.html">Back to Home</a><br><br>
 
-    <img src = "https://www.allrecipes.com/thmb/V1fydRvPJhJQ6zME5Lm7jPi6J2o=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11973-spaghetti-carbonara-mfs-043-2b5e74565db24e789aa790adfa87e18d.jpg" alt = "picture of carbonara">
+    <img src = "https://www.allrecipes.com/thmb/V1fydRvPJhJQ6zME5Lm7jPi6J2o=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11973-spaghetti-carbonara-mfs-043-2b5e74565db24e789aa790adfa87e18d.jpg" alt = "picture of carbonara" width="500">
 
     <h3>Description</h3>
-    <p>Hi! Welcome to my Simple Pasta Recipe!</p>
-    <p></p>
+    <p>Hi! Welcome to my Broke Boyz Carbonara Recipe!</p>
+    <p>This was a recipe that stemmed from the classic carbonara recipe eaten by many Italian. I developed this recipe when I was very broke, hence the "broke boyz" in the title. This recipe brings back a lot of memories. I still eat it sometimes as it is quick and easy to make. The reason it is named this way is because it doesn't use high quality ingredients rather it uses easy to get ingredients such as bacon, eggs, and whatever pasta you have lying around.</p>
 
     <h3>Ingredients</h3>
     <ul>
-        <li></li>
+        <li>100g of Bacon</li>
+        <li>4 Egg Yolks</li>
+        <li>250g of Pasta</li>
+        <li>40g of Pepper</li>
+        <li>200g of Grated Parmesan</li>
+        <li>10g of Salt</li>
+        <li>1L of Water</li>
     </ul>
 
     <h3>Steps</h3>
     <ol>
-        <Li></Li>
+        <Li>Boil you water, and when it boils add the salt and the pasta</Li>
+        <Li>Meanwhile put the eggs into a large mixing bowl and add the grated parmesan and pepper on top.</Li>
+        <Li>Mix the ingredients thoroughly.</Li>
+        <Li>On another pot, cook your bacon until some fat is rendered.</Li>
+        <Li>After your pasta is al dente, add it into the bacon and also add a cup of pasta water.</Li>
+        <Li>Mix the pasta, bacon, pasta water, vigorously.</Li>
+        <Li>Add the parm, pepper, and yolk mixture when the pan is warm to touch.</Li>
+        <li>Mix, Mix, Mix and Enjoy</li>
     </ol>
+
+    <ul><li>QUICK TIP: GET SOME TOAST AND SOAK UP THAT DELICIOUS SAUCE AND EAT IT!</li></ul>
 </body>
 </html>
