Modify recipes for pasta and pizza.

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -30,11 +30,11 @@
 
     <h3>Steps</h3>
     <ol>
-        <Li>Boil you water, and when it boils add the salt and the pasta</Li>
+        <Li>Boil your water, and when it boils add the salt and the pasta</Li>
         <Li>Meanwhile put the eggs into a large mixing bowl and add the grated parmesan and pepper on top.</Li>
         <Li>Mix the ingredients thoroughly.</Li>
         <Li>On another pot, cook your bacon until some fat is rendered.</Li>
-        <Li>After your pasta is al dente, add it into the bacon and also add a cup of pasta water.</Li>
+        <Li>After your pasta is al-dente, add it into the bacon and also add a cup of pasta water.</Li>
         <Li>Mix the pasta, bacon, pasta water, vigorously.</Li>
         <Li>Add the parm, pepper, and yolk mixture when the pan is warm to touch.</Li>
         <li>Mix, Mix, Mix and Enjoy</li>
